fix navbar ui issues on mobile view

--- a/app/assets/stylesheets/application/navbar.sass
+++ b/app/assets/stylesheets/application/navbar.sass
@@ -25,3 +25,5 @@
     background-repeat: no-repeat
     background-size: contain
     display: inline-block
+  .navBtn
+    margin-left: 8px
